<resources>
    <string name="app_name">Jamba Driver</string>
    <string name="name">Jamba</string>
    <string name="splash_title">Jamba Driver</string>
    <string name="welcome_one">Welcome to the</string>
    <string name="welcome_two">Driver app</string>
    <string name="signin">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="ride_user">or Ride with Jamba</string>
    <string name="otp_text">OTP</string>
    <string name="otp_place_holder">Enter 4 digit code</string>
    <string name="otp_label">Enter OTP</string>
    <string name="verify_label">Verify</string>
    <string name="verified_label">Verified</string>
    <string name="not_available">Outstation facility is not available for</string>
    <string name="expire_message">Your documents has been expired, Please update latest documents and continue the jamba services.</string>
    <string name="sign_in_text">Please sign in</string>
    <string name="emailid_text">Email Address</string>
    <string name="password_text">Password</string>
    <string name="forgotPassword_text">I forgot my password</string>
    <string name="pswd_errortxt">Please enter your password</string>
    <string name="emailid_errortxt">Please enter your email address</string>
    <string name="emailid_invalidtxt">You entered invalid credentials,please check and try again.</string>
    <string name="forgot_pswd_text">Forgot Password</string>
    <string name="fp_emailid_text">Enter your email</string>
    <string name="fp_next_text">NEXT</string>
    <string name="fp_acc_signup_text">Don\'t have an account?</string>
    <string name="fp_signup_text">Sign Up</string>
    <string name="fp_trouble_text">Having Trouble?</string>
    <string name="fp_gethelp_text">Get help</string>
    <string name="register_">Forgot Password</string>
    <string name="spanner_string_one">By proceeding, I agree to Jamba\'s\u0020</string>
    <string name="spanner_string_two">Terms of Use\u0020</string>
    <string name="spanner_string_three">and acknowledge that I have read the \u0020</string>
    <string name="spanner_string_four">Privacy Policy.</string>
    <string name="register_emailid_text">Please enter email</string>
    <string name="register_valid_emailid_text">Please enter valid email</string>
    <string name="register_mobileno_text">Please enter Mobile</string>
    <string name="register_valid_mobileno_text">Please enter valid mobile</string>
    <string name="register_password_text">Please enter Password</string>
    <string name="register_city_text">Please select city</string>
    <string name="register_acc_text">Let\'s start with creating your account</string>
    <string name="register_fn_text">First name</string>
    <string name="register_etfn_hint">Please enter first name</string>
    <string name="register_ln_text">Last name</string>
    <string name="register_etln_hint">Please enter last name</string>
    <string name="register_emailadd_text">Email address</string>
    <string name="register_emailid_hint">Please enter email</string>
    <string name="register_phone_text">Phone number</string>
    <string name="register_phone_hint">Please enter your mobile</string>
    <string name="register_pswd_text">Password</string>
    <string name="reason">Reason</string>
    <string name="register_pswd_hint">Please enter your password</string>
    <string name="reason_hint">Please enter your reason</string>
    <string name="registercity_text">City</string>
    <string name="registercity_hint">Please select city</string>
    <string name="register_invitation_text">Invitation code</string>
    <string name="register_optional_text">Optional</string>
    <string name="register_condition_text">I also agree the Jamba of its representatives may contact me by email, phone, or SMS(including by automated means) at the email address or number I provide, including for marketing purposes.</string>
    <string name="register_continue_text">Continue</string>
    <string name="fail_error">Unable to process your request, plese try again later.</string>
    <string name="signup_success">Registeration successfully completed</string>
    <string name="edit_descri_text">Describe yourself in few words</string>
    <string name="edit_languages_text">Add languages You know</string>
    <string name="edit_location_text">Share where your from</string>
    <string name="docu_textheadline">Documents</string>
    <string name="docu_driverline">Driver</string>
    <string name="doc_license_front">Driver\'s License(Front Side)</string>
    <string name="doc_license_back">Driver\'s License(Back Side)</string>
    <string name="doc_passbook">Bank Passbook</string>
    <string name="docu_expirytext">Expires:01/01/2020</string>
    <string name="docu_firstText">1.\u0020Get your Driver\'s License(Front Side)</string>
    <string name="docu_secondText">2.\u0020Make sure entire image is in frame</string>
    <string name="docu_thirdText">3.\u0020Take a photo</string>
    <string name="docu_fourthText">4.\u0020Upload a photo</string>
    <string name="docu_buttonText">Take Photo</string>
    <string name="vehicle_heading">Enter Your Vehicle Information</string>
    <string name="vehicle_makeHeading">Make</string>
    <string name="vehicle_makeSelection">Select A Make</string>
    <string name="vehicle_modelHeading">Model</string>
    <string name="vehicle_modelSelection">Select A Model</string>
    <string name="vehicle_yearHeading">Year</string>
    <string name="vehicle_yearSelection">Select A Year</string>
    <string name="vehicle_licenseHeading">License Number</string>
    <string name="delivery_heading">Opted for delivery services?</string>
    <string name="vehicle_licenseHeading1">EX: AP 07 RT 1234</string>
    <string name="make_heading1">EX: Tata</string>
    <string name="model_heading1">EX: Indica</string>
    <string name="year_heading1">EX: 2020</string>
    <string name="firstNameHeader">EX: Abc</string>
    <string name="lastNameHeader">EX: Xyz</string>
    <string name="mobileHeader">EX: 98XXXXXX10</string>
    <string name="emailHeader">EX: abc@gmail.com</string>
    <string name="passwordHeader">EX: 1234</string>
    <string name="cityHeader">EX: Hyderabad</string>
    <string name="invitationHeader">EX: XXX</string>
    <string name="vehicle_licenseNoText">Enter Your License Plate Number</string>
    <string name="vehicle_licenseDisclaimer">Your license plate number is helpful for your riders to identify your vehicle.</string>
    <string name="vehicle_continue">CONTINUE</string>
    <string name="inbox">Inbox</string>
    <string name="promotions">Promotions</string>
    <string name="earnings">Earnings</string>
    <string name="jambapro">Jamba Pro</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="success">success</string>
    <string name="message">message</string>
    <string name="xCustomToken">x-custom-token</string>
    <string name="go_text">GO</string>
    <string name="open_string">open</string>
    <string name="closed_string">closed</string>
    <string name="vehicles">Vehicles</string>
    <string name="signout">Sign out</string>
    <string name="select_vehicle">Select a vehicle</string>
    <string name="no_vehicles">No vehicles</string>
    <string name="add_vehicle">ADD A VEHICLE</string>
    <string name="add_vehicle_small">Add a Vehicle</string>
    <string name="ready_to_drive">Ready to drive</string>
    <string name="not_approved">Not yet approved</string>
    <string name="make_error">Please select your make</string>
    <string name="model_error">Please select your model</string>
    <string name="year_error">Please select vehicle year</string>
    <string name="licence_number">Please enter licence number</string>
    <string name="year_string">Year</string>
    <string name="nodata_found">No data found.</string>
    <string name="no_notifications">No notifications.</string>
    <string name="offline_status">You\'re offline</string>
    <string name="online_status">You\'re online</string>
    <string name="start_ride">START JAMBA GO</string>
    <string name="pickup">PICKUP</string>
    <string name="accept_ride">ACCEPT RIDE</string>
    <string name="fleet_accept">ACCEPT</string>
    <string name="decline_ride">DECLINE</string>
    <string name="fleet_reject">REJECT</string>
    <string name="cancel_ride">CANCEL RIDE</string>
    <string name="completed_ride">COMPLETE RIDE</string>
    <string name="completed_ride_text">Bill Details</string>
    <string name="cancel">Cancel</string>
    <string name="navigate_text">NAVIGATE</string>
    <string name="pickup_text">NAVIGATE</string>
    <string name="something_wrong">Something wrong? Choose an issue</string>
    <string name="complete_header">You are not at the customer destination , still you want to complete the trip?</string>
    <string name="custom_reason">Provide a custom reason</string>
    <string name="issue1">Accept trip by accident</string>
    <string name="issue2">Problem with pickup route</string>
    <string name="issue3">Pickup isn\'t worth it</string>
    <string name="issue4">Not safe to pickup</string>
    <string name="issue5">Vehicle issue</string>
    <string name="issue6">More issues</string>
    <string name="vehicle_error">Please select vehicle</string>
    <string name="map_api_key1">AIzaSyAsfrYS6hxjh8YHcqd0-C8LoM0hrvYyb-c</string>
    <string name="map_api_key">AIzaSyAsfrYS6hxjh8YHcqd0-C8LoM0hrvYyb-c</string>
    <string name="vehicle_online_error">Before select this please go online</string>
    <string name="internet_error">Please check your internet connection</string>
    <string name="vehicle_selection_error">Atleast one vehicle should be selected.</string>
    <string name="payment_string">Payment</string>
    <string name="payment_method">Payment Method</string>
    <string name="bank_text">Bank Account &#8226;&#8226;&#8226;</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="edit_bank_account">Edit Bank Account</string>
    <string name="account_number">Account Number</string>
    <string name="confirm_account_number">Confirm Account Number</string>
    <string name="ifsc_code">IFSC</string>
    <string name="account_holder_name">Account Holder name</string>
    <string name="earning_details">Earning Details</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="cash_out">CASH OUT</string>
    <string name="this_week">This Week</string>
    <string name="balance">balance</string>
    <string name="transaction_activity">Transactions</string>
    <string name="your_balance">Your Balance</string>
    <string name="procced">Processed</string>
    <string name="no_transactions">No transactions found.</string>
    <string name="from_text">From:</string>
    <string name="to_text">To:</string>
    <string name="total_trips">Total Trips:</string>
    <string name="total_earnings">Total Earnings:</string>
    <string name="location_not_availabe">Unable to fetch your location</string>
    <string name="arrive_by">Arrive by</string>
    <string name="minutes">Min</string>
    <string name="away_time">mins away</string>
    <string name="rides_list">Your Rides</string>
    <string name="no_trips">Trips not started yet</string>
    <string name="your_trips">My Trips</string>
    <string name="vehicle_documents_one">VEHICLE DOCUMENTS</string>
    <string name="trip_breakups">Trip Earning Breakups</string>
    <string name="payment_type_cash">Cash collected from customer</string>
    <string name="documents">Documents</string>
    <string name="payment">Payment</string>
    <string name="resend_message_two">Resend to</string>
    <string name="resend_static_message">How would you like to receive your code?</string>
    <string name="resend_code">RESEND CODE?</string>
    <string name="call_code">CALL ME WITH CODE?</string>
    <string name="dd_text">Design and Developed in Andhra Pradesh</string>
</resources>