<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_check"
            android:contentDescription="@string/app_name">
        </ImageView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_control"
            android:visibility="gone"
            android:contentDescription="@string/app_name">

        </ImageView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.jambacabs.driver.font.CustomTextView
                android:id="@+id/tv_DocuName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doc_license_front"
                android:textColor="@color/black"
                android:textSize="25sp">

            </com.jambacabs.driver.font.CustomTextView>

            <com.jambacabs.driver.font.CustomTextView
                android:id="@+id/tv_DocuExpiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/docu_expirytext"
                android:textSize="20sp">

            </com.jambacabs.driver.font.CustomTextView>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_chevron"
            android:contentDescription="@string/app_name">


        </ImageView>


    </LinearLayout>

</LinearLayout>